estilo de botones de movimiento

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
         <h2 class="subtitulo">recorre el mapa</h2>
         <canvas id="mapa"></canvas>
         <button onmouseup="detenerMover()" onmousedown="moverArriba()">arriba</button onmouseup="detenerMover()">
-        <button onmouseup="detenerMover()" onmousedown="moverIzquierda()">izquierda</button onmouseup="detenerMover()">
+        <div>
+            <button onmouseup="detenerMover()" onmousedown="moverIzquierda()">izquierda</button
+                onmouseup="detenerMover()">
+            <button onmouseup="detenerMover()" onmousedown="moverDerecha()">derecha</button>
+        </div>
         <button onmouseup="detenerMover()" onmousedown="moverAbajo()">abajo</button onmouseup="detenerMover()">
-        <button onmouseup="detenerMover()" onmousedown="moverDerecha()">derecha</button>
     </section>
     <section id="seleccion-ataque">
         <h2 class="subtitulo">elige tu ataque:</h2>
